update start_page css to fix the collapsing issue

--- a/client/stylesheets/start_page.css
+++ b/client/stylesheets/start_page.css
@@ -2,11 +2,12 @@
 body {
     background-color: #110a17;
     font-family: 'Roboto', sans-serif;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 50px;
 }
 
 .logo {
@@ -42,7 +43,7 @@ div.play-button:hover {
     color: #834eb1;
     text-decoration: underline;
     font-size: 24px;
-    line-height: 50%;
+    /* line-height: 50%; */
 }
 
 .instruction p {
